# visual_synth

./: CMakeLists.txt
scripts/: synthgen.ipynb
src/: Param.hpp  audio_thread.h  bridge.h  envelope.h  file_menu.h  graph_io.h  gui.cpp  gui.h  keyboard.h  main.cpp  midi.cpp  midi.h  multigraph.cpp  multigraph.h  node.h  node_factory.cpp  node_factory.h  node_graph.cpp  node_graph.h  node_types.h  note.h  output.cpp  output.h  plugin_interface.cpp  plugin_interface.h  ring_buffer.h  sync.h  synth.h  tracker.h  util.h  voice.h  waveform.h  writer.h
src/Filters/: BiQuad.cpp  BiQuad.hpp
src/GUI/: PatchBrowser.cpp  PatchBrowser.hpp
src/GridUI/: Colors.cpp  Colors.hpp  GridLayout.hpp  GridUI.cpp  GridUI.hpp  gridui_base.cpp
src/GridUI/Widgets/: Checkbox.cpp  Checkbox.hpp  Controls.hpp  Fader.hpp  Knob.hpp  Pin.hpp  TextInput.hpp  Toggle.cpp  Toggle.hpp  Widget.hpp  WidgetUtils.cpp  WidgetUtils.hpp
src/Oscillators/: Common.hpp  Waveform.cpp  Waveform.hpp
src/Sequencers/: PolySeq.cpp  PolySeq.hpp
src/nodes/: Filter.hpp  LFO.hpp  Sequencer.hpp  common.h  env.h  osc.h  seq.h  sink.h
src/ui/: knob.h  param.h  widgets.h
